--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="assets/img/hero-img.png" class="img-fluid animated" alt="">
+                    <img src="@Url.Content("~/assets/img/hero-img.png")" class="img-fluid animated" alt="">
                 </div>
             </div>
         </div>
@@ -136,45 +136,65 @@
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
-                <div class="row">
+                <section id="contact" class="contact">
+                    <div class="container" data-aos="fade-up">
 
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h3>Khoa CNTT</h3>
-                        <p>
-                            <strong>Cơ sở chính:</strong> 69/68 Đặng Thùy Trâm, P. 13, Q. Bình Thạnh, TP. HCM<br>
-                            <strong>Cơ sở 1:</strong> 45 Nguyễn Khắc Nhu, P. Cô Giang, Q.1, TP. HCM<br>
-                            <strong>Cơ sở 2:</strong> 233A Phan Văn Trị, P.11, Q. Bình Thạnh, TP. HCM<br>
-                            <strong>Ký túc xá:</strong> 160/63A-B Phan Huy Ích, P. 12, Q. Gò Vấp, TP. HCM<br>
-                            <strong>Phone:</strong> 028. 38367933<br>
-                            <strong>Email:</strong>info@vlu.edu.vn<br>
-                        </p>
-                    </div>
-
-                    @*<div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Services</h4>
-                        <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-                        </ul>
-                    </div>*@
-
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Our Social Networks</h4>
-                        <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
-                        <div class="social-links mt-3">
-                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+                        <div class="section-title">
+                            <h2>Contact</h2>
                         </div>
+
+                        <div class="row">
+
+                            <div class="col-lg-5 d-flex align-items-stretch">
+                                <div class="info">
+                                    <div class="address">
+                                        <i class="bi bi-geo-alt"></i>
+                                        <h4>Location:</h4>
+                                        <p>
+                                            <strong>Cơ sở chính:</strong> 69/68 Đặng Thùy Trâm, P. 13, Q. Bình Thạnh, TP. HCM<br>
+                                            <strong>Cơ sở 1:</strong> 45 Nguyễn Khắc Nhu, P. Cô Giang, Q.1, TP. HCM<br>
+                                            <strong>Cơ sở 2:</strong> 233A Phan Văn Trị, P.11, Q. Bình Thạnh, TP. HCM<br>
+                                            <strong>Ký túc xá:</strong> 160/63A-B Phan Huy Ích, P. 12, Q. Gò Vấp, TP. HCM<br>
+                                        </p>
+                                    </div>
+
+                                    <div class="email">
+                                        <i class="bi bi-envelope"></i>
+                                        <h4>Email:</h4>
+                                        <p>info@vlu.edu.vn</p>
+                                    </div>
+
+                                    <div class="phone">
+                                        <a href="tel:028.38367933"> <i class="bi bi-phone"></i> </a>
+                                        <h4>Call:</h4>
+                                        <p>028.38367933</p>
+                                    </div>
+
+                                    <div class="facebook">
+                                        <i class="bi bi-facebook"></i>
+                                        <h4>Facebook</h4>
+                                        <p></p>
+                                    </div>
+
+                                    <div class="instagram">
+                                        <i class="bi bi-instagram"></i>
+                                        <h4>Instagram</h4>
+                                        <p></p>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27931.268631971983!2d106.67860308559231!3d10.813326074921958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528f4a62fce9b%3A0xc99902aa1e26ef02!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBWxINuIExhbmcgLSBDxqEgc-G7nyAz!5e0!3m2!1svi!2s!4v1622997890472!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+                            </div>
+
+                        </div>
+
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27931.268631971983!2d106.67860308559231!3d10.813326074921958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528f4a62fce9b%3A0xc99902aa1e26ef02!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBWxINuIExhbmcgLSBDxqEgc-G7nyAz!5e0!3m2!1svi!2s!4v1622997890472!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-
-                </div>
+                </section><!-- End Contact Section -->
             </div>
         </div>
 
