--- a/SEP21/Views/Shared/_Layout.cshtml
+++ b/SEP21/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Arsha Bootstrap Template - Index</title>
+    <title>Khoa Công nghệ thông tin</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -53,7 +53,7 @@
                     <li class="dropdown">
                         <a href="#"><span>Sinh viên</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#">Thông tin sinh viên</a></li>
+                            <li><a href="https://online.vlu.edu.vn/ target=" _blank"">Thông tin sinh viên</a></li>
                             <li><a href="#">Đoàn - hội Khoa</a></li>
                         </ul>
                     </li>
@@ -87,23 +87,23 @@
                     <li class="dropdown">
                         <a href="#"><span>Tuyển dụng</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#">Sinh viên đang học</a></li>
+                            <li><a href="https://ejob.vanlanguni.edu.vn/ target=" _blank"">Sinh viên đang học</a></li>
                             <li><a href="#">Sinh viên đã ra trường</a></li>
                             <li><a href="#">Tuyển dụng cho Khoa CNTT</a></li>
                             <li><a href="#">Tuyển dụng cho Trường</a></li>
                         </ul>
                     </li>
-                    <li><a class="nav-link scrollto" href="#about">Tuyển sinh</a></li>
+                    <li><a class="nav-link scrollto" href="https://tuyensinh.vanlanguni.edu.vn/cong-nghe-thong-tin/ target=" _blank"">Tuyển sinh</a></li>
                     <li class="dropdown">
                         <a href="#"><span>Liên kết</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
-                            <li><a href="#">Thư viện Văn Lang</a></li>
-                            <li><a href="#">Trang học trực tuyến</a></li>
-                            <li><a href="#">Trang Đoàn - Hội</a></li>
+                            <li><a href="https://thuvien.vanlanguni.edu.vn/" target="_blank">Thư viện Văn Lang</a></li>
+                            <li><a href="https://elearning.vanlanguni.edu.vn/" target="_blank">Trang học trực tuyến</a></li>
+                            <li><a href="https://youth.vanlanguni.edu.vn/" target="_blank">Trang Đoàn - Hội</a></li>
                             <li><a href="#">Chia sẻ công cụ</a></li>
                         </ul>
                     </li>
-                    <li><a class="getstarted scrollto" href="#about">Login</a></li>
+                    <li><a class="getstarted scrollto" href="@Url.Action("Login","Account")">Login</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
             </nav><!-- .navbar -->
@@ -157,37 +157,40 @@
                                             <strong>Ký túc xá:</strong> 160/63A-B Phan Huy Ích, P. 12, Q. Gò Vấp, TP. HCM<br>
                                         </p>
                                     </div>
-
-                                    <div class="email">
-                                        <i class="bi bi-envelope"></i>
-                                        <h4>Email:</h4>
-                                        <p>info@vlu.edu.vn</p>
-                                    </div>
-
-                                    <div class="phone">
-                                        <a href="tel:028.38367933"> <i class="bi bi-phone"></i> </a>
-                                        <h4>Call:</h4>
-                                        <p>028.38367933</p>
-                                    </div>
-
-                                    <div class="facebook">
-                                        <i class="bi bi-facebook"></i>
-                                        <h4>Facebook</h4>
-                                        <p></p>
-                                    </div>
-
-                                    <div class="instagram">
-                                        <i class="bi bi-instagram"></i>
-                                        <h4>Instagram</h4>
-                                        <p></p>
-                                    </div>
+                                    <a href="mailto:k.cntt@vlu.edu.vn">
+                                        <div class="email">
+                                            <i class="bi bi-envelope"></i>
+                                            <h4>Email:</h4>
+                                            <p>k.cntt@vlu.edu.vn</p>
+                                        </div>
+                                    </a>
+                                    <a href="tel:028.38367933">
+                                        <div class="phone">
+                                            <i class="bi bi-phone"></i>
+                                            <h4>Call:</h4>
+                                            <p>028.38367933</p>
+                                        </div>
+                                    </a>
+                                    <a href="https://www.facebook.com/" target="_blank">
+                                        <div class="facebook">
+                                            <i class="bi bi-facebook"></i>
+                                            <h4>Facebook</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
+                                    <a href="https://www.instagram.com/" target="_blank">
+                                        <div class="instagram">
+                                            <i class="bi bi-instagram"></i>
+                                            <h4>Instagram</h4>
+                                            <p></p>
+                                        </div>
+                                    </a>
                                 </div>
 
                             </div>
 
                             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27931.268631971983!2d106.67860308559231!3d10.813326074921958!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528f4a62fce9b%3A0xc99902aa1e26ef02!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBWxINuIExhbmcgLSBDxqEgc-G7nyAz!5e0!3m2!1svi!2s!4v1622997890472!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
                             </div>
 
                         </div>
@@ -226,7 +229,7 @@
 
     <!-- Template Main JS File -->
     <script src="@Url.Content("~/assets/js/main.js")"></script>
-
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
