--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -10,22 +10,22 @@
     <title>Startmin - Bootstrap Admin Theme</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="@Url.Content("~//css/bootstrap.min.css")" rel="stylesheet">
+    <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../css/metisMenu.min.css" rel="stylesheet">
+    <link href="@Url.Content("~/css/metisMenu.min.css")" rel="stylesheet">
 
     <!-- Timeline CSS -->
-    <link href="../css/timeline.css" rel="stylesheet">
+    <link href="@Url.Content("~/css/timeline.css")" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../css/startmin.css" rel="stylesheet">
+    <link href="@Url.Content("~/css/startmin.css")" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../css/morris.css" rel="stylesheet">
+    <link href="@Url.Content("~/css/morris.css")" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="@Url.Content("~/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -890,21 +890,21 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="../js/jquery.min.js"></script>
+    <script src="@Url.Content("~/js/jquery.min.js")"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../js/bootstrap.min.js"></script>
+    <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../js/metisMenu.min.js"></script>
+    <script src="@Url.Content("~/js/metisMenu.min.js")"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../js/raphael.min.js"></script>
-    <script src="../js/morris.min.js"></script>
-    <script src="../js/morris-data.js"></script>
+    <script src="@Url.Content("~/js/raphael.min.js")"></script>
+    <script src="@Url.Content("~/js/morris.min.js")"></script>
+    <script src="@Url.Content("~/js/morris-data.js")"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../js/startmin.js"></script>
+    <script src="@Url.Content("~/js/startmin.js")"></script>
 
 </body>
 </html>
