--- a/SEP21/Areas/QuanLy/Views/AdminHome/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/AdminHome/Index.cshtml
@@ -3,6 +3,15 @@
     ViewBag.Title = "Index";
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
-
-<h2>Index</h2>
-
+<div id="page-wrapper">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Blank</h1>
+            </div>
+            <!-- /.col-lg-12 -->
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container-fluid -->
+</div>
