--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -74,6 +74,25 @@
                                 </div>
                             </li>
                             <li>
+                                <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="#">Cá nhân<span class="fa arrow"></span></a>
+                                        <ul class="nav nav-third-level">
+                                            <li>
+                                                <a href="#">Sinh viên</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Cán bộ Khoa</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a href="#">Khoa</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
                                 <a href="#"><i class="fa fa-dashboard fa-fw"></i>Giới thiệu</a>
                             </li>
                             <li>
