--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -1,169 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <title>Startmin - Bootstrap Admin Theme</title>
+    <title>Startmin - Bootstrap Admin Theme</title>
 
-        <!-- Bootstrap Core CSS -->
-        <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet">
 
-        <!-- MetisMenu CSS -->
-        <link href="@Url.Content("~/css/metisMenu.min.css")" rel="stylesheet">
+    <!-- MetisMenu CSS -->
+    <link href="@Url.Content("~/css/metisMenu.min.css")" rel="stylesheet">
 
-        <!-- Custom CSS -->
-        <link href="@Url.Content("~/css/startmin.css")" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="@Url.Content("~/css/startmin.css")" rel="stylesheet">
 
-        <!-- Custom Fonts -->
-        <link href="@Url.Content("~/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
+    <!-- Custom Fonts -->
+    <link href="@Url.Content("~/css/font-awesome.min.css")" rel="stylesheet" type="text/css">
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    </head>
-    <body>
-        @RenderBody()
-        <div id="wrapper">
-
-            <!-- Navigation -->
-            <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="@Url.Action("Index","AdminHome")">Khoa CNTT</a>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+</head>
+<body>
+    <div id="page-wrapper">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    @RenderBody()
                 </div>
-
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <ul class="nav navbar-right navbar-top-links">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw"></i>Khoa cntt<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
-                            <li>
-                                <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#"><i class="fa fa-home fa-fw"></i>Quay về trang User</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li>
-                                <a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-                <!-- /.navbar-top-links -->
-
-                <div class="navbar-default sidebar" role="navigation">
-                    <div class="sidebar-nav navbar-collapse">
-                        <ul class="nav" id="side-menu">
-                            <li class="sidebar-search">
-                                <div class="input-group custom-search-form">
-                                    <input type="text" class="form-control" placeholder="Search...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-primary" type="button">
-                                            <i class="fa fa-search"></i>
-                                        </button>
-                                    </span>
-                                </div>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="#">Cá nhân<span class="fa arrow"></span></a>
-                                        <ul class="nav nav-third-level">
-                                            <li>
-                                                <a href="@Url.Action("Index","SinhViens")">Sinh viên</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Cán bộ Khoa</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a href="#">Khoa</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="@Url.Action("Index","GioiThieux")"><i class="fa fa-dashboard fa-fw"></i>Giới thiệu</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dashboard fa-fw"></i>Đào tạo</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="#">Đoàn hội Khoa</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-dashboard fa-fw"></i>Hoạt động</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-sitemap fa-fw"></i>Tra cứu<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="#">Nghiên cứu khoa học</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-sitemap fa-fw"></i>Thành tích<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="#">Thành tích</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Học bổng</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href=#"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.sidebar-collapse -->
-                </div>
-                <!-- /.navbar-static-side -->
-            </nav>
+                <!-- /.col-lg-12 -->
+            </div>
         </div>
-        <!-- /#wrapper -->
-        <!-- jQuery -->
-        <script src="@Url.Content("~/js/jquery.min.js")"></script>
+    </div>
+    <div id="wrapper">
 
-        <!-- Bootstrap Core JavaScript -->
-        <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
+        <!-- Navigation -->
+        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="@Url.Action("Index","AdminHome")">Khoa CNTT</a>
+            </div>
 
-        <!-- Metis Menu Plugin JavaScript -->
-        <script src="@Url.Content("~/js/metisMenu.min.js")"></script>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
-        <!-- Custom Theme JavaScript -->
-        <script src="@Url.Content("~/js/startmin.js")"></script>
+            <ul class="nav navbar-right navbar-top-links">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i>Khoa cntt<b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li>
+                            <a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-home fa-fw"></i>Quay về trang User</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li>
+                            <a href="#"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- /.navbar-top-links -->
+
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                    <button class="btn btn-primary" type="button">
+                                        <i class="fa fa-search"></i>
+                                    </button>
+                                </span>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Quản lí thông tin<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="@Url.Action("Index","DangNhap")">Thông tin đăng nhập</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="@Url.Action("Index","GioiThieux")"><i class="fa fa-dashboard fa-fw"></i>Giới thiệu</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-dashboard fa-fw"></i>Đào tạo</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="#">Đoàn hội Khoa</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-dashboard fa-fw"></i>Hoạt động</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Tra cứu<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="#">Nghiên cứu khoa học</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-sitemap fa-fw"></i>Thành tích<span class="fa arrow"></span></a>
+                            <ul class="nav nav-second-level">
+                                <li>
+                                    <a href="#">Thành tích</a>
+                                </li>
+                                <li>
+                                    <a href="#">Học bổng</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href=#"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
+                        </li>
+                    </ul>
+                </div>
+                <!-- /.sidebar-collapse -->
+            </div>
+            <!-- /.navbar-static-side -->
+        </nav>
+    </div>
+    <!-- /#wrapper -->
+    <!-- jQuery -->
+    <script src="@Url.Content("~/js/jquery.min.js")"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
+
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="@Url.Content("~/js/metisMenu.min.js")"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="@Url.Content("~/js/startmin.js")"></script>
 
 
-        <script src="@Url.Content("~/js/dataTables/jquery.dataTables.min.js")"></script>
-        <script src="@Url.Content("~/js/dataTables/dataTables.bootstrap.min.js")"></script>
+    <script src="@Url.Content("~/js/dataTables/jquery.dataTables.min.js")"></script>
+    <script src="@Url.Content("~/js/dataTables/dataTables.bootstrap.min.js")"></script>
 
-        <script>
-            $(document).ready(function () {
-                $('#dataTables-example').DataTable({
-                    responsive: true
-                });
+    <script>
+        $(document).ready(function () {
+            $('#dataTables-example').DataTable({
+                responsive: true
             });
-        </script>
-    </body>
+        });
+    </script>
+</body>
 </html>
