--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -130,7 +130,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href=#"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
+                            <a href="@Url.Action("Index","TuyenDung")"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
                         </li>
                     </ul>
                 </div>
