--- a/SEP21/Areas/QuanLy/Views/GioiThieux/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/GioiThieux/Index.cshtml
@@ -5,42 +5,16 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.SuMang)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TamNhin)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TrietLyGiaoDuc)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.SuMang)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TamNhin)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TrietLyGiaoDuc)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
+<h1>Index</h1>
+@foreach (var item in Model)
+{
+    <p>
+        @Html.ActionLink("Edit", "Edit", new { id = item.ID })
+    </p>
+    <h3>Sứ mạng</h3>
+    <h4>@Html.DisplayFor(modelItem => item.SuMang)</h4>
+    <h3>Tầm nhìn</h3>
+    <h4>@Html.DisplayFor(modelItem => item.TamNhin)</h4>
+    <h3>Triết lý giáo dục</h3>
+    <h4>@Html.DisplayFor(modelItem => item.TrietLyGiaoDuc)</h4>
 }
-
-</table>
