--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -103,7 +103,7 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Sinh viên<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Đoàn hội Khoa</a>
+                                    <a href="@Url.Action("Index","DoanHoiKhoas")">Đoàn hội Khoa</a>
                                 </li>
                             </ul>
                         </li>
@@ -114,7 +114,7 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Tra cứu<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Nghiên cứu khoa học</a>
+                                    <a href="@Url.Action("Index","NCKHs")">Nghiên cứu khoa học</a>
                                 </li>
                             </ul>
                         </li>
@@ -122,7 +122,7 @@
                             <a href="#"><i class="fa fa-sitemap fa-fw"></i>Thành tích<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                                 <li>
-                                    <a href="#">Thành tích</a>
+                                    <a href="@Url.Action("Index","ThanhTiches")">Thành tích</a>
                                 </li>
                                 <li>
                                     <a href="#">Học bổng</a>
