--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model SEP21.Models.GioiThieu
+﻿@model SEP21.Models.ThanhTich
 
 @{
     ViewBag.Title = "Details";
@@ -8,31 +8,31 @@
 <h2>Details</h2>
 
 <div>
-    <h4>GioiThieu</h4>
+    <h4>ThanhTich</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.SuMang)
+            @Html.DisplayNameFor(model => model.TenThanhTich)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.SuMang)
+            @Html.DisplayFor(model => model.TenThanhTich)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TamNhin)
+            @Html.DisplayNameFor(model => model.NguoiDatThanhTich)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TamNhin)
+            @Html.DisplayFor(model => model.NguoiDatThanhTich)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TrietLyGiaoDuc)
+            @Html.DisplayNameFor(model => model.NoiDung)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TrietLyGiaoDuc)
+            @Html.DisplayFor(model => model.NoiDung)
         </dd>
 
     </dl>
