Fix lỗi các index và Update TuyenDung

--- a/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/DoanHoiKhoas/Index.cshtml
@@ -5,24 +5,24 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Đoàn Hội Khoa</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo Mới", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ChucVu)
+            Chức vụ
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Doan)
+            Đoàn
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Hoi)
+            Hội
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.SinhVien.MSSV)
+            MSSV
         </th>
         <th></th>
     </tr>
