--- a/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/NCKHs/Index.cshtml
@@ -5,18 +5,18 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Nghiên Cứu Khoa Học</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo Mới", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Ten)
+           Tên
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NoiDung)
+            Nội Dung
         </th>
         <th></th>
     </tr>
