--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
@@ -8,18 +8,18 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo Mới", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.TenThanhTich)
+            Tên Thành Tích
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NguoiDatThanhTich)
+            Người Đạt Thành Tích
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.NoiDung)
+            Nội Dung
         </th>
         <th></th>
     </tr>
