--- a/SEP21/Areas/QuanLy/Views/BaiViets/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Bài Viết</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Tạo Mới", "Create")
 </p>
 <table class="table">
     <tr>
