--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -77,7 +77,7 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="form-control" placeholder="Tìm Kiếm....">
                                 <span class="input-group-btn">
                                     <button class="btn btn-primary" type="button">
                                         <i class="fa fa-search"></i>
@@ -130,7 +130,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href=#"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
+                            <a href="@Url.Action("Index","TuyenDung")"><i class="fa fa-dashboard fa-fw"></i>Tuyển dụng</a>
                         </li>
                     </ul>
                 </div>
