Controller Login Admin
Controller Admin xong
View Login admin chua xong

--- a/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
+++ b/SEP21/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Startmin - Bootstrap Admin Theme</title>
+    <title>Admin Manage - Khoa CNTT</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet">
