--- a/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Edit.cshtml
@@ -5,20 +5,20 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Edit</h2>
+<h2>Chỉnh Sửa</h2>
 <script src="~/Plugin/ckeditor/ckeditor.js"></script>
 @using (Html.BeginForm("Edit", "BaiViet", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>BaiViet</h4>
+        <h4>Bài Viết</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NgayDangBai, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Ngày Đăng Bài", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NgayDangBai, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NgayDangBai, "", new { @class = "text-danger" })
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.TieuDe, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Tiêu Đề", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.TieuDe, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TieuDe, "", new { @class = "text-danger" })
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.NguoiDang, "NguoiDang", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Người Đăng", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("NguoiDang", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NguoiDang, "", new { @class = "text-danger" })
@@ -42,7 +42,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nội dung", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NoiDung, new { htmlAttributes = new { @class = "form-control", @id = "FullDescription" } })
                 @Html.ValidationMessageFor(model => model.NoiDung, "", new { @class = "text-danger" })
@@ -51,7 +51,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.LoaiBaiViet, "LoaiBaiViet", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Loại Bài Viết", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("LoaiBaiViet", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LoaiBaiViet, "", new { @class = "text-danger" })
@@ -60,12 +60,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Lưu" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Trở Lại", "Index")
 </div>
