--- a/SEP21/Areas/QuanLy/Views/BaiViets/Details.cshtml
+++ b/SEP21/Areas/QuanLy/Views/BaiViets/Details.cshtml
@@ -5,14 +5,14 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Details</h2>
+<h2>Thông Tin Bài Viết</h2>
 
 <div>
-    <h4>BaiViet</h4>
+    <h4>Bài Viết</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.NgayDangBai)
+            Ngày Đăng Bài
         </dt>
 
         <dd>
@@ -20,7 +20,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.TieuDe)
+            Tiêu Đề
         </dt>
 
         <dd>
@@ -28,7 +28,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NoiDung)
+            Nội Dung
         </dt>
 
         <dd>
@@ -36,7 +36,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiBaiViet1.TenLoaiBaiViet)
+            Tên Loại Bài Viết
         </dt>
 
         <dd>
@@ -44,7 +44,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.NhanVienKhoa.MaNhanVien)
+            Mã Nhân Viên
         </dt>
 
         <dd>
@@ -54,6 +54,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Chỉnh Sửa", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Trở Lại", "Index")
 </p>
