--- a/SEP21/Areas/QuanLy/Views/LoaiBaiViets/Create.cshtml
+++ b/SEP21/Areas/QuanLy/Views/LoaiBaiViets/Create.cshtml
@@ -11,11 +11,11 @@
         @Html.AntiForgeryToken()
         
         <div class="form-horizontal">
-            <h4>LoaiBaiViet</h4>
+            <h4>Loại Bài Viết</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             <div class="form-group">
-                @Html.LabelFor(model => model.TenLoaiBaiViet, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.Label(" Tên Loại Bài Viết ", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.TenLoaiBaiViet, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.TenLoaiBaiViet, "", new { @class = "text-danger" })
@@ -24,14 +24,14 @@
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Tạo" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Trở Lại", "Index")
     </div>
 </body>
 </html>
