--- a/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
+++ b/SEP21/Areas/QuanLy/Views/ThanhTiches/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Areas/QuanLy/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Thành Tích</h2>
 
 <p>
     @Html.ActionLink("Tạo Mới", "Create")
